WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
160277
First parameter to setTimeout() / setInterval() should be mandatory
https://bugs.webkit.org/show_bug.cgi?id=160277
Summary
First parameter to setTimeout() / setInterval() should be mandatory
Chris Dumez
Reported
2016-07-27 16:16:33 PDT
First parameter to setTimeout() / setInterval() should be mandatory: -
https://html.spec.whatwg.org/multipage/webappapis.html#windoworworkerglobalscope
Firefox and Chrome agree with the specification.
Attachments
Patch
(7.65 KB, patch)
2016-07-27 16:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-07-27 16:19:11 PDT
Created
attachment 284743
[details]
Patch
WebKit Commit Bot
Comment 2
2016-07-27 16:51:19 PDT
Comment on
attachment 284743
[details]
Patch Clearing flags on attachment: 284743 Committed
r203805
: <
http://trac.webkit.org/changeset/203805
>
WebKit Commit Bot
Comment 3
2016-07-27 16:51:24 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug