First parameter to setTimeout() / setInterval() should be mandatory https://bugs.webkit.org/show_bug.cgi?id=160277

Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Rebaseline W3C test now that more checks are passing.

* web-platform-tests/html/dom/interfaces-expected.txt:

Source/WebCore:

First parameter to setTimeout() / setInterval() should be mandatory:
- https://html.spec.whatwg.org/multipage/webappapis.html#windoworworkerglobalscope

Firefox and Chrome agree with the specification.

No new tests, rebaselined existing test.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::setTimeout):
(WebCore::JSDOMWindow::setInterval):
* bindings/js/JSWorkerGlobalScopeCustom.cpp:
(WebCore::JSWorkerGlobalScope::setTimeout):
(WebCore::JSWorkerGlobalScope::setInterval):


Canonical link: https://commits.webkit.org/178433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203805 268f45cc-cd09-0410-ab3c-d52691b4dbfc