Source/WebCore/bindings/js/JSWorkerGlobalScopeCustom.cpp
@@ -79,6 +79,9 @@ JSValue JSWorkerGlobalScope::importScripts(ExecState& state)
 
 JSValue JSWorkerGlobalScope::setTimeout(ExecState& state)
 {
+    if (UNLIKELY(state.argumentCount() < 1))
+        return state.vm().throwException(&state, createNotEnoughArgumentsError(&state));
+
     std::unique_ptr<ScheduledAction> action = ScheduledAction::create(&state, globalObject()->world(), wrapped().contentSecurityPolicy());
     if (state.hadException())
         return jsUndefined();
@@ -90,6 +93,9 @@ JSValue JSWorkerGlobalScope::setTimeout(ExecState& state)
 
 JSValue JSWorkerGlobalScope::setInterval(ExecState& state)
 {
+    if (UNLIKELY(state.argumentCount() < 1))
+        return state.vm().throwException(&state, createNotEnoughArgumentsError(&state));
+
     std::unique_ptr<ScheduledAction> action = ScheduledAction::create(&state, globalObject()->world(), wrapped().contentSecurityPolicy());
     if (state.hadException())
         return jsUndefined();
